manifests/api-gateway/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-gateway
  labels:
    name: api-gateway
---
apiVersion: v1
kind: Namespace
metadata:
  name: identity-services
  labels:
    name: identity-services
